# PolkaAlert

./: .gitignore  Dockerfile  README.md  pyproject.toml
polkaalert/: bot_telegram.py  db_utils.py  extract_price.py  main.py
